syntax = "proto3";

package francenuage.fr.api.controlplane.v1.hypervisors;

// Hypervisors service provides operations to manage hypervisors.
service Hypervisors {
    rpc ListHypervisors (ListHypervisorsRequest) returns (ListHypervisorsResponse);
    rpc RegisterHypervisor (RegisterHypervisorRequest) returns (RegisterHypervisorResponse);
}

message ListHypervisorsRequest {}

message ListHypervisorsResponse {
    repeated Hypervisor hypervisors = 1;
}

// RegisterHypervisorRequest is an empty message for registering an hypervisor.
message RegisterHypervisorRequest {
    Hypervisor hypervisor = 1;
}

// RegisterHypervisorResponse contains the result of a register hypervisor operation.
message RegisterHypervisorResponse {}

message Hypervisor {
    string url = 1;
}
